[package]
name = "plain"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.2"
bincode = "1.3.3"
bitcoin = { version = "0.30.1", features = ["serde"] }
blake3 = "1.4.1"
bs58 = { version = "0.5.0", features = ["check"] }
byteorder = "1.4.3"
bytes = "1.4.0"
ed25519-dalek = { version = "1.0.1", features = ["batch", "serde"] }
ed25519-dalek-bip32 = "0.2.0"
heed = { git = "https://github.com/meilisearch/heed", tag = "v0.12.4", version = "0.12.4" }
hex = "0.4.3"
http = "0.2.9"
jsonrpsee = { version = "0.19.0", features = ["client", "macros"] }
quinn = "0.10.1"
rayon = "1.7.0"
rcgen = "0.11.1"
rustls = { version = "0.21.5", features = ["dangerous_configuration"] }
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.104"
sha256 = "1.2.2"
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["sync"] }
