[package]
# name = "{{crate_name}}_app"
name = "plain_app"
version = "0.1.0"
edition = "2021"
authors = [ "{{authors}}" ]

[dependencies]
# {{crate_name}} = { path = "../lib" }
plain = { path = "../lib" }

anyhow = "1.0.72"
serde = { version = "1.0.179", features = ["derive"] }
thiserror = "1.0.44"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "macros"] }
bincode = "1.3.3"
clap = { version = "4.3.19", features = ["derive"] }
dirs = "5.0.1"
eframe = "0.22.0"
tiny-bip39 = "1.0.0"
human-size = "0.4.3"
